--- a/src/main/ogres/app/resource/component.css
+++ b/src/main/ogres/app/resource/component.css
@@ -12,6 +12,12 @@
   pointer-events: none;
   position: absolute;
   text-transform: uppercase;
+  z-index: 10;
+}
+
+[data-tooltip]:not(:disabled):is(:hover, :focus-visible),
+[data-tooltip]:has(:focus-visible) {
+  z-index: 1;
 }
 
 .pagination {
